--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
-
-
 .circular-square {
     border-radius: 50%;
     vertical-align: middle;
@@ -13,21 +11,21 @@
     padding-right: 5px;
 }
 
-.sidebar-container {
-    margin-right: 5px;    
-}
-
-.sidebar-logo {
-    display:block;
-    margin:auto;
-}
-
-.sidebar-close {
-    margin-top: 10px;
-    display:block;
-    margin:auto;
-}
-
 .toolbar-site-title {
     margin-left: 10px;    
 }
+
+.sidebar-container {
+    margin-right: 5px;    
+    text-align: center;
+}
+
+// .sidebar-logo {
+//     display:block;
+//     margin:auto;
+// }
+
+.sidebar-close-button-container {
+    margin-top: 10px;
+}
+
