--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 
   <div>
 
-    <mat-toolbar>
+    <mat-toolbar color="primary">
       <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item>My Resume</button>
@@ -25,9 +25,12 @@
       </mat-menu>
       <span class="toolbar-site-title">
         <img class="circular-square toolbar-logo" src="./assets/blogLogo.jpg" width="18px" />
-        Romel Gomez - Frontend Web Developer 
-      </span>      
-    </mat-toolbar>
+        Romel Gomez - Web Developer 
+      </span>
+      <span class="toolbar-spacer"></span>
+      <a href="https://github.com/romelgomez" target="_blank"><mat-icon svgIcon="github"></mat-icon></a>
+    </mat-toolbar>    
+    
 
     <br>
     <br>
