--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,17 @@
     <div class="sidebar-container">
       <div>
           <h2>Welcome Professor</h2>
-          <img  src="./assets/HAL9000.png" width="45px" />              
+          <img class="sidebar-logo" src="./assets/HAL9000.png" />              
       </div>
-      <div class="sidebar-close-button-container">
+      <mat-nav-list>
+          <a mat-list-item routerLink="/my-resume" > My Resume </a>
+          <a mat-list-item routerLink="/login" > Login </a>
+      </mat-nav-list>
+      <!-- <div class="sidebar-close-button-container">
           <button (click)="drawer.toggle()" mat-raised-button>
             Close
           </button>    
-      </div>
+      </div> -->
     </div>
 
   </mat-drawer>
@@ -18,106 +22,26 @@
   <div>
 
     <mat-toolbar color="primary">
-      <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
+      <button (click)="drawer.toggle()" mat-button><mat-icon>menu</mat-icon></button>
+      <!-- <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item>My Resume</button>
         <button mat-menu-item (click)="drawer.toggle()">Login</button>
-      </mat-menu>
-      <span class="toolbar-site-title">
-        <img class="circular-square toolbar-logo" src="./assets/blogLogo.jpg" width="18px" />
-        Romel Gomez - Web Developer 
-      </span>
+      </mat-menu> -->
+      <a routerLink="/" routerLinkActive="active" class="toolbar-site-title">
+        <span>
+            <img class="circular-square toolbar-logo" src="./assets/blogLogo.jpg"/>
+              Romel Gomez - Web Developer 
+          </span>   
+      </a>
+
+
       <span class="toolbar-spacer"></span>
       <a href="https://github.com/romelgomez" target="_blank"><mat-icon svgIcon="github"></mat-icon></a>
     </mat-toolbar>    
     
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <b>text</b>
-    <h1>text</h1>
-    <h2>text</h2>
-    <h3>text</h3>
-    <h4>text</h4>
-
-    <hr>
-
-    <h3>Basic Buttons</h3>
-    <div class="button-row">
-      <button mat-button>Basic</button>
-      <button mat-button color="primary">Primary</button>
-      <button mat-button color="accent">Accent</button>
-      <button mat-button color="warn">Warn</button>
-      <button mat-button disabled>Disabled</button>
-      <a mat-button routerLink=".">Link</a>
-    </div>
-    
-    <h3>Raised Buttons</h3>
-    <div class="button-row">
-      <button mat-raised-button>Basic</button>
-      <button mat-raised-button color="primary">Primary</button>
-      <button mat-raised-button color="accent">Accent</button>
-      <button mat-raised-button color="warn">Warn</button>
-      <button mat-raised-button disabled>Disabled</button>
-      <a mat-raised-button routerLink=".">Link</a>
-    </div>
-    
-    <h3>Icon Buttons</h3>
-    <div class="button-row">
-      <button mat-icon-button>
-        <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
-      </button>
-      <button mat-icon-button color="primary">
-        <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
-      </button>
-      <button mat-icon-button color="accent">
-        <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
-      </button>
-      <button mat-icon-button color="warn">
-        <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
-      </button>
-      <button mat-icon-button disabled>
-        <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
-      </button>
-    </div>
-    
-    <h3>Fab Buttons</h3>
-    <div class="button-row">
-      <button mat-fab>Basic</button>
-      <button mat-fab color="primary">Primary</button>
-      <button mat-fab color="accent">Accent</button>
-      <button mat-fab color="warn">Warn</button>
-      <button mat-fab disabled>Disabled</button>
-      <button mat-fab>
-        <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
-      </button>
-      <a mat-fab routerLink=".">Link</a>
-    </div>
-    
-    <h3>Mini Fab Buttons</h3>
-    <div class="button-row">
-      <button mat-mini-fab>Basic</button>
-      <button mat-mini-fab color="primary">Primary</button>
-      <button mat-mini-fab color="accent">Accent</button>
-      <button mat-mini-fab color="warn">Warn</button>
-      <button mat-mini-fab disabled>Disabled</button>
-      <button mat-mini-fab>
-        <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
-      </button>
-      <a mat-mini-fab routerLink=".">Link</a>
-    </div>
-    
+    <router-outlet></router-outlet>
 
 
   </div>
