--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -55,16 +55,21 @@
     </div>
     
     <h3>Fab Buttons</h3>
-    <div class="button-row">
+    <div class="button-row ">
       <button mat-fab>Basic</button>
       <button mat-fab color="primary">Primary</button>
       <button mat-fab color="accent">Accent</button>
       <button mat-fab color="warn">Warn</button>
       <button mat-fab disabled>Disabled</button>
-      <button mat-fab>
-        <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
-      </button>
-      <a mat-fab routerLink=".">Link</a>
+
+      <div>
+        <button mat-fab class="theme__button2">
+          <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
+        </button>
+        <a mat-fab class="theme__button2" routerLink=".">Link</a>
+  
+      </div>
+
     </div>
     
     <h3>Mini Fab Buttons</h3>
