--- a/src/app/my-resume/my-resume.component.html
+++ b/src/app/my-resume/my-resume.component.html
@@ -1,3 +1,63 @@
-<p>
-  my-resume works!
-</p>
+<div class="resume-container">
+  <mat-card class="example-card">
+    <mat-card-header>
+      <div mat-card-avatar class="blog-header-image"></div>
+      <mat-card-title>My Resume</mat-card-title>
+      <mat-card-subtitle>In coffee lines</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="/assets/surf.jpg" alt="Photo of surfboard">
+    <mat-card-content>
+  
+      <p>
+          {{ 'myResume.HELLO' | translate:param }}
+      </p>
+  
+      <p>
+        As web developer, every time that I going in some web project, the part that I most enjoy is write code, and feel secure in what I am doing, I get that feeling when I have some time without downtimes, passing bugs fast, and see the related docs like my bank account, I know what I have, and know what I can do with that, is mostly about feeling right with what is being done. I experiment that feeling many times, the ups and downs,  switching on technologies, and recently with Angular, the differences between the two major versions, at the first version I feel like, O.K, I know how to ride this bike, and then well, the second version came out, I was like, what? here I go again...
+      </p>
+      <p>
+        Currently, I into pick up Angular Mayor Version which is 5.x, RxJS, and Material. And at some point, I write code to use AngularJS 1.x, Algolia, Cloudinary, Node, Express, Firebase, Gulp, TypeScript, Bootstrap, jQuery, CakePHP 2.x, Openshift, GoLang, PHP, JAVA, MySql, Google App Engine for JAVA, Spring MVC 3.X, 2checkout.com     
+      </p>
+      <p>
+        And a big plus, I also specialise in PC software support.        
+      </p>
+  
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Education
+            </mat-panel-title>
+            <mat-panel-description>
+              Very formal
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+      
+  
+          University: Degree in Professor of Informatics in the Universidad Pedagógica Experimental Libertador of Venezuela							
+          Secondary school specializing in science
+           
+  
+        </mat-expansion-panel>
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                             (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Self aware panel
+            </mat-panel-title>
+            <mat-panel-description>
+              Currently I am {{panelOpenState ? 'open' : 'closed'}}
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <p>I'm visible because I am open</p>
+        </mat-expansion-panel>
+      </mat-accordion>
+  
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
+
