--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,20 @@
 
 
       <span class="toolbar-spacer"></span>
-      <a href="https://github.com/romelgomez" target="_blank"><mat-icon svgIcon="github"></mat-icon></a>
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>language</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item (click)="setDefaultLang('es')" [disabled]="currentLang==='es'" >
+          <!-- <mat-icon>dialpad</mat-icon> -->
+          <span>Spanish</span>
+        </button>
+        <button mat-menu-item (click)="setDefaultLang('en')" [disabled]="currentLang==='en'">
+          <!-- <mat-icon>voicemail</mat-icon> -->
+          <span>English</span>
+        </button>
+      </mat-menu>
+      <a href="https://github.com/romelgomez" target="_blank"><mat-icon class="toolbar-github-link" svgIcon="github"></mat-icon></a>
     </mat-toolbar>    
     
 
