--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,7 @@ body {
 
 
 .sidebar-container {
-    margin: 0 5px 0 5px;    
+    margin: 20px 5px 0 5px;    
     text-align: center;
 }
 
@@ -77,7 +77,16 @@ body {
 }
 
 .toolbar-github-link {
-    vertical-align: middle;
+    vertical-align: sub;
+}
+
+
+.sidebar-root-container {
+    background: black;
+}
+
+.sidebar-mat-nav-list > a {
+    color: white !important;
 }
 
  
