--- a/src/app/my-resume/my-resume.component.scss
+++ b/src/app/my-resume/my-resume.component.scss
@@ -1,3 +1,8 @@
 .resume-container {
     padding: 30px;
 }
+
+.resume-header-image {
+    background-image: url('/assets/blogLogo.jpg');
+    background-size: cover;
+}
