--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,7 +89,9 @@ body {
     color: white !important;
 }
 
- 
+.lang-icons {
+    vertical-align: text-bottom !important;
+} 
 
 .theme__button2 {
     color: #fff !important; 
