--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,15 +44,16 @@
 
       <span class="toolbar-spacer"></span>
       <button mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon>language</mat-icon>
+        <mat-icon *ngIf="currentLang==='es'" svgIcon="venezuela" ></mat-icon>
+        <mat-icon *ngIf="currentLang==='en'" svgIcon="uk" ></mat-icon>
       </button>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="setDefaultLang('es')" [disabled]="currentLang==='es'" >
-          <!-- <mat-icon>dialpad</mat-icon> -->
+        <button *ngIf="currentLang!=='es'" mat-menu-item (click)="setDefaultLang('es')" [disabled]="currentLang==='es'" >
+          <mat-icon  class="lang-icons" svgIcon="venezuela"></mat-icon>
           <span>Spanish</span>
         </button>
-        <button mat-menu-item (click)="setDefaultLang('en')" [disabled]="currentLang==='en'">
-          <!-- <mat-icon>voicemail</mat-icon> -->
+        <button *ngIf="currentLang!=='en'" mat-menu-item (click)="setDefaultLang('en')" [disabled]="currentLang==='en'">
+          <mat-icon  class="lang-icons" svgIcon="uk"></mat-icon>
           <span>English</span>
         </button>
       </mat-menu>
