chore (css improves)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,8 +28,12 @@
 
       <a routerLink="/" routerLinkActive="active" class="toolbar-site-title">
         <button mat-button>
-          Romel Gomez - Web Developer 
+          R.Gomez - Web Developer 
           <mat-icon>devices</mat-icon>
+          <!-- <img class="circular-square toolbar-logo" src="./assets/blogLogo.jpg"/> -->
+        </button>
+        <button mat-button>
+          R.Gomez - <mat-icon>devices</mat-icon>
           <!-- <img class="circular-square toolbar-logo" src="./assets/blogLogo.jpg"/> -->
         </button>
       </a>
