--- a/src/app/my-resume/my-resume.component.html
+++ b/src/app/my-resume/my-resume.component.html
@@ -20,11 +20,11 @@
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              <!-- <mat-icon>school</mat-icon> -->
-               Education
+              <mat-icon>school</mat-icon>
+               <span class="resume-select-panel-title">Education</span>
             </mat-panel-title>
             <mat-panel-description>
-              Very formal
+              <span class="resume-select-description">Very formal</span>
             </mat-panel-description>
           </mat-expansion-panel-header>
       
@@ -37,10 +37,10 @@
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Repositories               
+              <span class="resume-select-panel-title">Repositories</span>               
             </mat-panel-title>
             <mat-panel-description>
-              0101101
+              <span class="resume-select-description">0101101</span>
             </mat-panel-description>
           </mat-expansion-panel-header>
       
@@ -55,12 +55,11 @@
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              <!-- <mat-icon>business_center</mat-icon> -->
-              
-              Formal Jobs               
+              <mat-icon>business_center</mat-icon>
+              <span class="resume-select-panel-title">Formal Jobs</span>                             
             </mat-panel-title>
             <mat-panel-description>
-              
+              <!-- <span class="resume-select-description">$$$$$$$</span> -->
             </mat-panel-description>
           </mat-expansion-panel-header>
       
@@ -78,10 +77,10 @@
         <mat-expansion-panel>
           <mat-expansion-panel-header>
             <mat-panel-title>
-              Courses
+              <span class="resume-select-panel-title">Courses</span>               
             </mat-panel-title>
             <mat-panel-description>
-              
+              <!-- <span class="resume-select-description">0101101</span>               -->
             </mat-panel-description>
           </mat-expansion-panel-header>
 
