--- a/src/app/my-resume/my-resume.component.scss
+++ b/src/app/my-resume/my-resume.component.scss
@@ -6,3 +6,12 @@
     background-image: url('/assets/blogLogo.jpg');
     background-size: cover;
 }
+
+.resume-select-panel-title{
+    padding-left: 5px;
+    margin-top: 3px;
+}
+
+.resume-select-description{
+    margin-top: 3px;
+}
