chore (add contact component)

--- a/src/app/my-resume/my-resume.component.html
+++ b/src/app/my-resume/my-resume.component.html
@@ -101,7 +101,9 @@
   
     </mat-card-content>
     <mat-card-actions class="my-resume-actions">
-      <button mat-button class="get-in-touch-button">Get in touch!</button>
+      <a routerLink="/contact" routerLinkActive="active">
+        <button mat-button class="get-in-touch-button">Get in touch!</button>
+      </a>
     </mat-card-actions>
   </mat-card>
 </div>
