--- a/src/app/my-resume/my-resume.component.scss
+++ b/src/app/my-resume/my-resume.component.scss
@@ -29,6 +29,7 @@
 
 .get-in-touch-button {
     height: 70px;
+    color: #ff5623;
 }
 
 .mat-button, .mat-fab, .mat-icon-button, .mat-mini-fab, .mat-raised-button {
