--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 
     <mat-nav-list class="sidebar-mat-nav-list">
       <a mat-list-item routerLink="/my-resume" > My Resume </a>
+      <a mat-list-item routerLink="/contact" > Contact </a>
       <a mat-list-item routerLink="/login" > Login </a>
     </mat-nav-list>
 
