install basic password social login

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,9 @@
 <div class="blog-container">
 
+    <app-sign-in></app-sign-in>
+    <hr>
+    <app-login></app-login>
+    <hr>
     <mat-list>
         <mat-list-item> <app-twitter-auth [user]="user"></app-twitter-auth> </mat-list-item>
         <mat-list-item> <app-google-auth [user]="user" ></app-google-auth> </mat-list-item>
