--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,20 +1,18 @@
 <div class="blog-container">
 
-    <app-sign-in></app-sign-in>
-    <hr>
-    <app-login></app-login>
-    <hr>
-    <mat-list>
-        <mat-list-item> <app-twitter-auth [user]="user"></app-twitter-auth> </mat-list-item>
-        <mat-list-item> <app-google-auth [user]="user" ></app-google-auth> </mat-list-item>
-        <mat-list-item> <app-facebook-auth [user]="user" ></app-facebook-auth> </mat-list-item>
-    </mat-list>
-    <app-logout [user]="user"></app-logout>
-    <hr>
 
-    <app-auth-state [user]="user" ></app-auth-state>
 
-    <hr>
+    <mat-card class="example-card">
+        <mat-card-header>
+            <div mat-card-avatar class="resume-header-image"></div>
+            <mat-card-title>Almost ready!</mat-card-title>
+            <mat-card-subtitle>@coffeeandcode</mat-card-subtitle>            
+        </mat-card-header>    
+        <img mat-card-image src="/assets/images/subaru.jpg" alt="Photo of surfboard">      
+    </mat-card>     
+      
+
+    <!-- <hr>
 
     <h1>Blog Component</h1>
     
@@ -96,7 +94,7 @@
         <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
       </button>
       <a mat-mini-fab routerLink=".">Link</a>
-    </div>
+    </div> -->
     
 
 </div>
