--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,11 @@
-<p>
-  contact works!
-</p>
+<div class="contact-container">
+    <mat-card class="example-card">
+        <mat-card-header>
+            <div mat-card-avatar class="resume-header-image"></div>
+            <mat-card-title>Do you want a ride?</mat-card-title>
+            <mat-card-subtitle>@coffeeandcode</mat-card-subtitle>            
+        </mat-card-header>    
+        <img mat-card-image src="/assets/images/ferrari.jpg" alt="Photo of surfboard">      
+    </mat-card>
+</div>
+      
