--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,11 +12,14 @@
     <br> 
     
     <mat-card>
-        <mat-list>
-            <mat-list-item> <app-twitter-auth [user]="user"></app-twitter-auth> </mat-list-item>
-            <mat-list-item> <app-google-auth [user]="user" ></app-google-auth> </mat-list-item>
-            <mat-list-item> <app-facebook-auth [user]="user" ></app-facebook-auth> </mat-list-item>
-        </mat-list>    
+        <div *ngIf="user | async; else noSocialLogins" ></div>
+        <ng-template #noSocialLogins>
+            <mat-list>
+                <mat-list-item><app-twitter-auth></app-twitter-auth> </mat-list-item>
+                <mat-list-item> <app-google-auth></app-google-auth> </mat-list-item>
+                <mat-list-item> <app-facebook-auth></app-facebook-auth> </mat-list-item>
+            </mat-list>    
+        </ng-template>
     </mat-card>
     
     <br> 
@@ -30,7 +33,50 @@
     
     <mat-card>
       <h4>Auth state:</h4> 
-      <app-auth-state [user]="user" ></app-auth-state>
+      <div *ngIf="user | async; let user; else loading">
+        <pre> {{user | json}} </pre>
+      </div> 
+      <ng-template #loading>Waiting for User Data...</ng-template>
     </mat-card>
     
 </div>
+
+
+<!-- <div>
+    <app-auth-state [user]="user" ></app-auth-state>
+</div>
+
+<mat-card>
+    <mat-card-title>Inicio de sesión</mat-card-title>
+    <mat-card-content>
+        <mat-tab-group>
+            <mat-tab label="Tengo una cuenta">
+                
+                <br>
+                <app-password-auth></app-password-auth>                 
+
+
+            </mat-tab>
+            <mat-tab label="Registro">
+                <br>
+                <app-password-auth-sign-in></app-password-auth-sign-in>  
+
+            </mat-tab>
+            <mat-tab label="Recuperar cuenta">Recovery</mat-tab>            
+        </mat-tab-group>
+             
+        <hr>
+
+        <mat-list>
+            <mat-list-item> <app-twitter-auth [user]="user"></app-twitter-auth> </mat-list-item>
+            <mat-list-item> <app-google-auth [user]="user" ></app-google-auth> </mat-list-item>
+            <mat-list-item> <app-facebook-auth [user]="user" ></app-facebook-auth> </mat-list-item>
+        </mat-list>
+
+
+    </mat-card-content>
+</mat-card> 
+
+<app-logout [user]="user"></app-logout>
+
+ -->
