add terms and privacy

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -38,6 +38,12 @@
       </div> 
       <ng-template #loading>Waiting for User Data...</ng-template>
     </mat-card>
+    <br> 
+    
+    <mat-card>
+        <a mat-list-item routerLink="/terms-of-service" > Terms of service </a>
+        <a mat-list-item routerLink="/privacy-policy" > Privacy Policy </a>  
+    </mat-card>
     
 </div>
 
