--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,10 @@ body {
     overflow: hidden;
 }
 
+.container {
+    padding: 30px;
+}
+
 
 .sidebar-container {
     margin: 20px 5px 0 5px;    
