add github login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,6 +18,7 @@
                 <mat-list-item><app-twitter-auth></app-twitter-auth> </mat-list-item>
                 <mat-list-item> <app-google-auth></app-google-auth> </mat-list-item>
                 <mat-list-item> <app-facebook-auth></app-facebook-auth> </mat-list-item>
+                <mat-list-item> <app-github-auth></app-github-auth> </mat-list-item>
             </mat-list>    
         </ng-template>
     </mat-card>
