fix 'Duplicate function implementation.'

--- a/src/app/auth/password/sign-in/sign-in.component.html
+++ b/src/app/auth/password/sign-in/sign-in.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="signInForm" (ngSubmit)="onSubmit(signInForm)" novalidate>
+<form [formGroup]="signInForm" (ngSubmit)="onSubmit()" novalidate>
     <mat-form-field>
         <input matInput placeholder="Email" class="form-control" formControlName="email">
         <mat-error *ngIf="email().invalid">{{emailErrorMessage()}}</mat-error>
