improve the sidenav

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,14 @@ body {
     overflow: hidden;
 }
 
+.root-container {
+    position: absolute !important;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 .container {
     padding: 30px;
 }
