--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<mat-drawer-container autosize class="root-container">
-  <mat-drawer #drawer mode="side" class="sidebar-root-container">
+<mat-sidenav-container (backdropClick)="closeSidenav()" class="root-container">
+  <mat-sidenav #sidenav (keydown.escape)="closeSidenav()" class="sidebar-root-container">
+    <!-- <p><button mat-button (click)="closeSidenav()">Toggle</button></p> -->
 
     <div class="sidebar-container">
       <div>
@@ -9,25 +10,25 @@
     </div>
 
     <mat-nav-list class="sidebar-mat-nav-list">
-      <a mat-list-item routerLink="/my-resume" > My Resume </a>
-      <a mat-list-item routerLink="/contact" > Contact </a>
+      <a mat-list-item routerLink="/my-resume" (click)="closeSidenav()" > My Resume </a>
+      <a mat-list-item routerLink="/contact" (click)="closeSidenav()" > Contact </a>
 
       <div *ngIf="user | async; let user; else showLoginURL">
-          <a mat-list-item appRgLogout> Logout </a>
+          <a mat-list-item appRgLogout (click)="closeSidenav()" > Logout </a>
       </div> 
       <ng-template #showLoginURL>
-          <a mat-list-item routerLink="/login" > Login </a>
+          <a mat-list-item routerLink="/login" (click)="closeSidenav()" > Login </a>
       </ng-template>
 
     </mat-nav-list>
 
+  </mat-sidenav>
 
-  </mat-drawer>
-
-  <div>
+  <mat-sidenav-content>
+    <!-- <p><button mat-button (click)="sidenav.open()">Open</button></p> -->
 
     <mat-toolbar color="primary">
-      <button (click)="drawer.toggle()" mat-button><mat-icon>menu</mat-icon></button>
+      <button (click)="sidenav.open()" mat-button><mat-icon>menu</mat-icon></button>
       <!-- <button mat-button [matMenuTriggerFor]="menu"><mat-icon>menu</mat-icon></button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item>My Resume</button>
@@ -75,7 +76,8 @@
 
     <router-outlet></router-outlet>
 
+    
 
-  </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
 
-</mat-drawer-container>
