--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,15 +1,50 @@
-<div class="blog-container">
+<div class="container">
 
 
+  <mat-grid-list cols="{{cols}}" rowHeight="2:1" role="list" gutterSize="5">
+    <mat-grid-tile role="listitem">  
+      <a href="https://github.com/romelgomez/digital-ocean-how-to-set-up-a-nodejs-application-for-production-on-ubuntu-16.04" target="_blank">
+          <img src="https://res.cloudinary.com/peruve/image/upload/q_auto:eco/v1516919292/download_20_thpmul.jpg">  
+          <mat-grid-tile-footer>DigitalOcean - how to set up a Node.js application for production on ubuntu 16.04</mat-grid-tile-footer>
+      </a>
+    </mat-grid-tile>
+    <mat-grid-tile role="listitem">
+        <img src="http://res.cloudinary.com/peruve/image/upload/c_scale,q_auto:good,w_900/v1516918289/download_13_dit8yz.jpg">  
+    </mat-grid-tile>
+    <mat-grid-tile role="listitem">
+        <img src="http://res.cloudinary.com/peruve/image/upload/c_scale,q_auto:good,w_900/v1516918283/download_7_xmeyre.jpg">  
+    </mat-grid-tile>
+    <mat-grid-tile role="listitem">
+        <img src="http://res.cloudinary.com/peruve/image/upload/c_scale,q_auto:good,w_900/v1516918305/download_5_khjm1c.jpg">  
+    </mat-grid-tile>
+    <mat-grid-tile role="listitem" colspan="{{cols}}">
+      <!-- <mat-grid-tile-header>Amazing title</mat-grid-tile-header> -->
+        <img src="https://res.cloudinary.com/peruve/image/upload/v1516919307/16564464885_d723850317_o_r9o6cz.jpg">
+      <mat-grid-tile-footer>Amazing Title</mat-grid-tile-footer>
+    </mat-grid-tile>
+    <mat-grid-tile role="listitem">
+        <img src="https://res.cloudinary.com/peruve/image/upload/c_scale,q_auto:good,w_900/v1516919566/16376793128_1de1823b91_b_g9lyjd.jpg">
+    </mat-grid-tile>
+    <mat-grid-tile role="listitem">
+        <img src="https://res.cloudinary.com/peruve/image/upload/q_auto:eco/v1516920237/16564465795_3a6f9c1b1f_b_b51llq.jpg">
+    </mat-grid-tile>
+    <mat-grid-tile role="listitem">
+        <img src="https://res.cloudinary.com/peruve/image/upload/c_scale,q_auto:good,w_900/v1516919491/download_18_hdcbc9.jpg">
+    </mat-grid-tile>
+    <mat-grid-tile role="listitem">
+        <img src="https://res.cloudinary.com/peruve/image/upload/c_scale,q_auto:good,w_900/v1516919620/download_mw0uwg.jpg">
+    </mat-grid-tile>
+  </mat-grid-list>
 
-    <mat-card class="example-card">
+
+    <!-- <mat-card class="example-card">
         <mat-card-header>
             <div mat-card-avatar class="resume-header-image"></div>
             <mat-card-title>Almost ready!</mat-card-title>
             <mat-card-subtitle>@coffeeandcode</mat-card-subtitle>            
         </mat-card-header>    
         <img mat-card-image src="/assets/images/subaru.jpg" alt="Photo of surfboard">      
-    </mat-card>     
+    </mat-card>      -->
       
 
     <!-- <hr>
