--- a/src/app/my-resume/my-resume.component.html
+++ b/src/app/my-resume/my-resume.component.html
@@ -5,7 +5,7 @@
       <mat-card-title>My Resume</mat-card-title>
       <mat-card-subtitle>In lines of code</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="/assets/images/coffe.svg" alt="Photo of surfboard">
+    <img mat-card-image src="https://res.cloudinary.com/peruve/image/upload/q_auto:eco/v1516919960/coffe_pzt07z.svg" alt="Photo of surfboard">
 
 
     <mat-card-content>
