--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -6,3 +6,13 @@
     background-image: url('/assets/blogLogo.jpg');
     background-size: cover;
 }
+
+mat-grid-tile {
+    background: lightblue;
+  }
+  
+  img {
+    width: 100%;
+  }
+  
+  
