chore (chage http to https)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="sidebar-container">
       <div>
           <!-- <h2>Welcome</h2> -->
-          <img class="sidebar-logo" src="./assets/HAL9000.png" />              
+          <img class="sidebar-logo" src="https://res.cloudinary.com/peruve/image/upload/q_auto:low/v1516925339/HAL9000_hevei2.png" />              
       </div>
     </div>
 
