--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -5,7 +5,7 @@
             <mat-card-title>Do you want a ride?</mat-card-title>
             <mat-card-subtitle>@coffeeandcode</mat-card-subtitle>            
         </mat-card-header>    
-        <img mat-card-image src="http://res.cloudinary.com/peruve/image/upload/q_auto:best/v1516918073/Liberty-Walk-Ferrari-458-3_sbn90l.jpg" alt="Photo of surfboard">      
+        <img mat-card-image src="https://res.cloudinary.com/peruve/image/upload/q_auto:best/v1516918073/Liberty-Walk-Ferrari-458-3_sbn90l.jpg" alt="Photo of surfboard">      
     </mat-card>
 </div>
       
