--- a/src/app/my-resume/my-resume.component.scss
+++ b/src/app/my-resume/my-resume.component.scss
@@ -3,7 +3,7 @@
 }
 
 .resume-header-image {
-    background-image: url('/assets/blogLogo.jpg');
+    background-image: url('https://res.cloudinary.com/peruve/image/upload/q_auto:low/v1516925339/blogLogo_fuob9x.jpg');
     background-size: cover;
 }
 
